# Agentic-ai-full

./: .gitignore  README.md  pyproject.toml
Langchain/: 2.1streaming.ipynb  3-tools.ipynb  5-structureoutput.ipynb  6-middlewear.ipynb  6.5-human_in_the_look.ipynb  langchain_intro.ipynb  messages.ipynb  model_integraion.ipynb  tools.ipynb
RAG/: document.ipynb  pdf_loader.ipynb  pdf_loader2.ipynb
deepAgent/: AGENTS.md
deepAgent/notebooks/: 3-backend.ipynb  basic.ipynb  context-engineering.ipynb  deepagent.ipynb  deepagent_fixed.ipynb  subagents.ipynb
langgraph/: basic_chatbot.ipynb  chatbotwithtools.ipynb  client.py  human_inloop.ipynb  mathserver.py  mcp.ipynb  weather.py
notes/: todo.txt
src/: __init__.py  chunking.py  data_loader.py  embedding.py  search.py  vectorstore.py
src/core/: __init__.py  config.py  logger.py  security.py
src/evaluation/: __init__.py  metrics.py
src/generation/: __init__.py  guardrails.py  llm_client.py  prompts.py
src/ingestion/: __init__.py  chunkers.py  indexers.py  loaders.py
src/retrieval/: __init__.py  embedder.py  hybrid_search.py  rerank.py  vector_db.py
