[project]
name = "agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "langchain_community>=0.0.1",
    "langchain-groq>=0.0.1",
    "langchain-google-genai>=0.0.1",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipywidgets>=8.0.0",
    
]
